<?xml version="1.0"?>
<package format="3">
  <name>sw_car_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for car_robot robot</p>
  </description>
  <author email="TODO@email.com">Your Name</author>
  <maintainer email="TODO@email.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf_launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/jetson/stm_ws/install/sw_car_robot/share/" />
  </export>
</package>